[package]
name = "rustfishing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
rexiv2 = "0.10"
base64 = "0.13.0"
openssl = { version = "0.10", features = ["vendored"] }
memexec = "0.2"
